Ajustes Paginado CUMCO020

--- a/src/assets/mp-forest-mantenimiento-correspondencia/i18n/es.json
+++ b/src/assets/mp-forest-mantenimiento-correspondencia/i18n/es.json
@@ -695,7 +695,9 @@
           "exito":"Operación  ejecutada con éxito",
           "falloGuardar":"Se ha presentado un error al guardar",
           "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
-          "campoCodigoRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El proceso \"{{codigoNombre}}\", se encuentra repetido, por favor validar",
+          "campoCodigoRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El proceso con código \"{{codigoNombre}}\", se encuentra repetido, por favor validar",
+          "campoCodigoRepetidoError2": "El proceso con código \"{{codigoNombre}}\", se encuentra repetido, por favor validar",  
+          "campoNombreRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El proceso con nombre \"{{codigoNombre}}\", se encuentra repetido, por favor validar",  
           "eliminarProcesoProcedimientoError" : "El proceso \"{{proceso}}\" no puede ser eliminado ya que se encuentra asociado a uno o más procedimientos",    
           "eliminarProcesoDependenciaError": "El proceso \"{{proceso}}\" no puede ser eliminado: Se encuentra vinculado a los organismos o dependencias \"{{nombresDependencia}}\"",    
           "eliminarProcedimientoRadicadoError" : "El procedimiento \"{{procedimiento}}\" asociado al proceso \"{{proceso}}\" no puede ser eliminado: Se encuentra asociado a uno o más borradores y/o radicados en el sistema",
